eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiny-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.shiny-bank.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shiny-bank-api-service
            port: 
              number: 80

  tls:
  - hosts:
    - api.shiny-bank.org
    secretName: shiny-bank-api-cert
